# django-puppeteer-pdf

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
puppeteer_pdf/: __init__.py  utils.py
src/puppeteer_pdf/: __init__.py
tests/: __init__.py  test_puppeteer_pdf.py
