[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "puppeteer_pdf"
version = "0.1.5"
description = "Provides Django views to wrap the HTML to PDF conversion using puppeteer."
readme = "README.rst"
authors = [
  {name = "Octave", email = "hello@octave.nz"}
]
maintainers = [
  {name = "Octave", email = "hello@octave.nz"}
]
classifiers = [

]
license = {text = "BSD-2-Clause"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/octavenz/django-puppeteer-pdf/issues"
changelog = "https://github.com/octavenz/django-puppeteer-pdf/blob/master/changelog.md"
homepage = "https://github.com/octavenz/django-puppeteer-pdf"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

