[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-puppeteer-pdf"
version = "0.1.5"
description = "Provides Django views to wrap the HTML to PDF conversion using puppeteer."
keywords = [
    "django",
    "puppeteer",
    "pdf"
]
readme = "README.rst"
authors = [
  {name = "Namespace", email = "admin@incuna.com"},
  {name = "Octave", email = "hello@octave.nz"}
]
maintainers = [
  {name = "Octave", email = "hello@octave.nz"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django"
]
license = {text = "MIT"}
dependencies = [

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/octavenz/django-puppeteer-pdf/issues"
changelog = "https://github.com/octavenz/django-puppeteer-pdf/blob/master/changelog.md"
homepage = "https://github.com/octavenz/django-puppeteer-pdf"

[tool.setuptools]
package-dir = {"puppeteer_pdf" = "puppeteer_pdf"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

